--- a/public/css/form.css
+++ b/public/css/form.css
@@ -70,7 +70,8 @@ picture {
 
 body {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: var(--light-color);
     color: var(--black-color);
     font-family: var(--font-family);
