--- a/public/css/notes.css
+++ b/public/css/notes.css
@@ -56,7 +56,8 @@ select {
 
 body {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: var(--light-color);
     color: var(--dark-color);
     font-family: var(--font-family);
